# pmr_elirobots_driver

./: pyproject.toml
src/pmr_elirobots_driver/: client.py  server.py
